modifications made in applications

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,10 +8,12 @@
     <div class="box">
        
         <% for(var i=0 ; i<k.length ; i++){ %>
+            <form action="/delete" method="post">
             <div class="item">
-            <input type="checkbox">
-               <p> <%= k[i]%> </p>
+            <input type="checkbox" onclick="this.form.submit()" name="checkbox" value="<%=k[i]._id+" "+day%>">
+               <p> <%= k[i].name%> </p>
             </div>
+            </form>
             <% } %>
                 <form class="item" action="/" method="post">
                     <input type="text" name="nextItem" placeholder="New Item" autocomplete="off">
