--- a/public/styles.css
+++ b/public/styles.css
@@ -1,9 +1,12 @@
-html {
+body {
   background-color: #efe9fd;
   background-image: -webkit-linear-gradient(65deg, #A683E3 50%, #e4e9fd 50%);
   min-height: 1000px;
   font-family: 'Montserrat', sans-serif;
 }
+.custom-toggler.navbar-toggler {
+  border-color: rgb(2, 1, 2);
+} 
 
 h1 {
   color: #fff;
@@ -51,7 +54,7 @@ p {
   color: #00204a;
 }
 
-form {
+form.item {
   text-align: center;
   margin-left: 20px;
 }
@@ -66,6 +69,7 @@ button {
   font-size: 30px;
   padding-bottom: 6px;
   border-width: 0;
+  
 }
 
 input[type="text"] {
